fixed build messages in javawin